WebHelpers ChangeLog

0.6.1 (**tip**)
* Include a faster version of cgi.escape for use by the literal object.
* Fixed bug in SimplerXMLGenerator that the FeedGenerator uses, so that
  it doesn't use a {} arg.
* New helpers:
  - ul() and ol() in webhelpers.html.tags.
  - series() in webhelpers.text.

0.6 (07/08/2008)
* Add webhelpers.html.builder to generate HTML tags with smart escaping,
  along with a literal type to mark preformatted strings.
* Deprecate webhelpers.rails, including its Javascript libraries (Prototype
  and Scriptaculous).  Wrap all rails helpers in a literal.
* Many new modules:
  constants - countries, states, and provinces.
  containers - high-level collections, including flash messages.
  date - date/time (rails replacement).
  html.converters - text-to-HTML (rails replacement).
  html.tags - HTML tags (rails replacement).
  html.tools - larger HTML chunks (rails replacement).
  mail - sending email.
  misc -  helpers that are neither text, numeric, container, nor date.
  number - numeric helpers and number formatters.
  paginate - successor to deprecated pagination module.
  text - non-HTML text formatting (rails replacement).
* Removed dependency on simplejson and normalized quotes. Patch by Elisha 
  Cook.

COMPATIBILITY CHANGES IN 0.6 DEV VERSION:
- image(), javascript_link(), stylesheet_link(), and auto_discovery_link()
  in webhelpers.html.tags do not add prefixes or suffixes to the URL args
  anymore; they output the exact URL given. Same for button_to() in
  webhelpers.html.tools.
- webhelpers.html.tags.javascript_path was deleted.

0.3.4 (03/18/08)
* Fixed missing javascripts dir.

0.3.3 (02/27/08)
* Fixed strip_unders so that it won't explode during iteration when the size
  changes.
* Updated feedgenerator with the latest changes from Django's version (only
  a few additional attributes).

0.3.2 (09/05/07)
* Added capability to pass pagination a SA 0.4 Session object which will be 