@@ -7,6 +7,7 @@ WebHelpers ChangeLog
 * New helpers:
   - ul() and ol() in webhelpers.html.tags.
   - series() in webhelpers.text.
+* Change default form method to "post" (rather than "POST") to conform to XHTML.
 
 0.6 (07/08/2008)
 * Add webhelpers.html.builder to generate HTML tags with smart escaping,
